--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     background-image: url(/images/headerbg.svg);
     width: 100%;
     height: 700px;
-    background-size: cover;
+    
     
 }
 .features1 {
@@ -34,7 +34,7 @@
     background-image: url('/images/testimonialsbg.svg');
     width: 100%;
     height: 385px;
-    background-size: cover;    
+        
 }
 .faqbg {
     width: 100%;
@@ -47,12 +47,12 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
-    background-size: cover;
+    border-radius: 5px;
 }
 .footerbg {
     width: 100%;
     height: 90px;
 }
 #footer {
-    text-align: center;
+    position-anchor: center;
 }
