--- a/css/main.css
+++ b/css/main.css
@@ -1,69 +1,249 @@
+/* The code for the navigation code was directly taken from a teachers video, 
+there's been some deviation from it, and colours added since this is something the project refers to.
+From there on, I've tried to incorporate a one to one replication of the project file, in order to make this 'website'. */
+
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+
+:root {
+    /* Grayscale */
+    --color-gray-100: #F3F6FF; /* Light BG */
+    --color-gray-200: #EFF2FC; /* Secondary */
+    --color-gray-300: #E2E5F1; /* Divider, Border */
+    --color-gray-400: #D4D7E5; /* Forms Border */
+    --color-gray-500: #B4B7C9; /* Input Placeholder */
+    --color-gray-600: #9397AD; /* Muted Text */
+    --color-gray-700: #565973; /* Body Text */
+    --color-gray-800: #33354D; /* Navigation */
+    --color-gray-900: #0B0F19; /* Header, Dark */
+    /* Brand */
+    --color-primary: #6366F1; /* Brand, Primary */
+    --color-gradiant-1: #6366F1; /* 0% */
+    --color-gradiant-2: #8B5CF6; /* 50% */
+    --color-gradiant-3: #D946EF; /* 100% */
+    /* System & Buttons */
+    --color-red: #EF4444; /* Error */
+    --color-green: #22C55E; /* Success */
+    --color-yellow: #FFBA08; /* Warning */
+    --color-blue: #4C82F7; /* Info */
+    --color-black: #000; /* Black Button */
+    /* Shadows */
+    --color-white: #fff; /* S, M, L */
+    --color-brand-btn: #6366F1; /* Brand, Primary */
+    /* Logos */
+    --color-twitter: #1CA1F2; /* Twitter Blue */
+    --color-youtube: #FF0000; /* Youtube Red */
+
+    --container-padding: 1rem;
+    --transition-time: all 0.2s;
+
+}
+
+/* ------------------------------------------------------------- Mobile Version / Base-Line Configuration */
+
+.container {
+    width: 100%;
+    padding-left: var(--container-padding);
+    padding-right: var(--container-padding);
+    margin-left: auto;
+    margin-right: auto;    
+}
+
 * {
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+body, section, div, header, footer, main, aside, nav, blockquote, p, span {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
-/* <uniquifier>: Use a unique and descriptive class name */
-/* <weight>: Use a value from 200 to 800 */
-
-.manrope-semibold {
-  font-family: "Manrope", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 600;
-  font-style: semibold;
+body {
+    font-family: "Manrope", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
 }
 
-.font {
-    color: black;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+a {
+    color: var(--color-primary);
+    text-decoration: none;
+}
+a:hover {
+    color: var(--color-primary);
+    /* text-decoration: underline; */
+}
+.btn-primary {
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    border-radius: 8px;
+    padding: 8px 25px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+.btn-primary:hover {
+    background-color: var(--color-gray-600);
+    color: var(--color-white);
+    text-decoration: none;
+}
+.btn-primary i {
+    margin-right: .5rem;
 }
 
-.headerbg {
-    background-image: url(/images/headerbg.svg);
+.btn-mobile {
+    background-color: transparent;
+    border: none;
+    font-size: 2rem;
+    padding-top: 5px;
+}
+
+.btn-toggle-switch {
+    display: flex;
+    /* align-items: center; */
+    padding-top: 14px;
+    gap: 10px;
+}
+.btn-toggle-switch .label {
+    /* Dark Mode Text Show/Hide */
+    display: none;
+    padding-top: 2px;
+    font-weight: 700;
+}
+.toggle-switch {
+    position: relative;
+    display: inline-block;
+    width: 45px;
+    height: 25px;
+}
+.toggle-switch input {
+    opacity: 0;
+}
+.toggle-switch input:checked + .slider {
+    background-color: var(--color-primary);
+}
+.toggle-switch input:focus + .slider {
+    box-shadow: 0 0 1px var(--color-primary);
+}
+.toggle-switch input:checked + .slider::before {
+    transform: translateX(18px);
+    background-color: var(--color-white);
+}
+.toggle-switch .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--color-gray-600);
+}
+.toggle-switch .slider::before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 3px;
+    bottom: 2.5px;
+    background-color: var(--color-white);
+    transition: all 200ms;
+}
+.toggle-switch .slider.round {
+    border-radius: 35px;
+}
+.toggle-switch .slider.round::before {
+    border-radius: 50%;
+}
+
+.navbar {
+    /* Menu Alternatives Show/Hide */
+    display: none;
+}
+
+#logo {
+    padding-top: 4.3px; 
+}
+
+.nav-link {
+    color: var(--color-gray-900);
+    font-weight: 600; /* SemiBold */
+    text-decoration: none;
+}
+.nav-link:hover .active {
+    color: var(--color-primary);
+    /* text-decoration: underline; */
+}
+
+#auth-signin-create {
+    /* Sign in / up button Show/Hide */
+    display: none;
+}
+
+header .container {
+    display: grid;
+    grid-template-columns: 1fr auto auto;
+    /* grid-template-areas: "Logo sw mobile"; */
+    gap: 1.5em;
+    padding-top: 1rem;
+    padding-bottom: .5rem;
+}
+
+
+
+/* ------------------------------------------------------------- Tablet Version*/
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
+    }
+    .btn-toggle-switch .label {
+        display: block;
+    }
+    header .container {
+        gap: 4rem;
+    }
+}
+
+#showcase {
+    background-image: url(/images/light/background/headerbg.svg);
     width: 100%;
-    height: 700px;
-    
-    
+    /* height: 700px; */
 }
-.features1 {
-    background-color: white;
-    width: 100%;
-    height: 800px;
+
+/* ------------------------------------------------------------- Desktop 1k Version */
+@media (min-width: 1400px) {
+    .container {
+        max-width: 1320px;
+    }
+    .btn-toggle-switch .label {
+        display: block;
+    }
+    header .container {
+        grid-template-columns: auto 1fr auto auto;
+        gap: 3rem;
+    }
+    .navbar {
+        /* Menu option Show/Hide */
+        display: block;
+        align-content: center;
+    }
+    #auth-signin-create {
+        /* Sign in / up button Show/Hide */
+        display: block;
+    }
+    .btn-mobile {
+        /* Hamburger menu Show/Hide */
+        display: none;
+    }
+    #showcase {
+        height: 700px;
+    }
+
+
 }
-.features2-sliderbg {
-    background-image: url(/images/sliderbg.svg);
-    width: 100%;
-    height: 800px;
-}
-.features3 {
-    background-color: white;
-    width: 100%;
-    height: 1000px;
-}
-.testimonialsbg {
-    background-image: url('/images/testimonialsbg.svg');
-    width: 100%;
-    height: 385px;
-        
-}
-.faqbg {
-    width: 100%;
-    height: 600px;
-}
-.subscribebg {
-    background-image: url('/images/testimonialsbg.svg');
-    width: 70%;
-    height: 180px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 10px;
-    border-radius: 5px;
-}
-.footerbg {
-    width: 100%;
-    height: 90px;
-}
-#footer {
-    position-anchor: center;
-}
+/* ------------------------------------------------------------- Desktop 2k Version */
+/* ------------------------------------------------------------- Desktop 4k Version */
+
+
