--- a/css/main.teacher.version.css
+++ b/css/main.teacher.version.css
@@ -34,8 +34,19 @@
 
 }
 
+/* ------------------------------------------------------------- Mobile Version / Base-Line Configuration */
+
+.container {
+    width: 100%;
+    padding-left: var(--container-padding);
+    padding-right: var(--container-padding);
+    margin-left: auto;
+    margin-right: auto;    
+}
+
 * {
     box-sizing: border-box;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body, section, div, header, footer, main, aside, nav, blockquote, p, span {
@@ -57,5 +68,163 @@ a {
 }
 a:hover {
     color: var(--color-primary);
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
+.btn-primary {
+    background-color: var(--color-primary);
+    color: var(--color-white);
+    border-radius: 8px;
+    padding: 8px 25px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+.btn-primary:hover {
+    background-color: var(--color-gray-600);
+    color: var(--color-white);
+    text-decoration: none;
+}
+.btn-primary i {
+    margin-right: .5rem;
+}
+
+.btn-mobile {
+    background-color: transparent;
+    border: none;
+    font-size: 2rem;
+    padding-top: 5px;
+}
+
+.btn-toggle-switch {
+    display: flex;
+    /* align-items: center; */
+    padding-top: 14px;
+    gap: 10px;
+}
+.btn-toggle-switch .label {
+    /* Dark Mode Text Show/Hide */
+    display: none;
+    padding-top: 2px;
+    font-weight: 700;
+}
+.toggle-switch {
+    position: relative;
+    display: inline-block;
+    width: 45px;
+    height: 25px;
+}
+.toggle-switch input {
+    opacity: 0;
+}
+.toggle-switch input:checked + .slider {
+    background-color: var(--color-primary);
+}
+.toggle-switch input:focus + .slider {
+    box-shadow: 0 0 1px var(--color-primary);
+}
+.toggle-switch input:checked + .slider::before {
+    transform: translateX(18px);
+    background-color: var(--color-white);
+}
+.toggle-switch .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--color-gray-600);
+}
+.toggle-switch .slider::before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 3px;
+    bottom: 2.5px;
+    background-color: var(--color-white);
+    transition: all 200ms;
+}
+.toggle-switch .slider.round {
+    border-radius: 35px;
+}
+.toggle-switch .slider.round::before {
+    border-radius: 50%;
+}
+
+.navbar {
+    /* Menu Alternatives Show/Hide */
+    display: none;
+}
+
+#logo {
+    padding-top: 4.3px; 
+}
+
+.nav-link {
+    color: var(--color-gray-900);
+    font-weight: 600; /* SemiBold */
+    text-decoration: none;
+}
+.nav-link:hover .active {
+    color: var(--color-primary);
+    /* text-decoration: underline; */
+}
+
+#auth-signin-create {
+    /* Sign in / up button Show/Hide */
+    display: none;
+}
+
+header .container {
+    display: grid;
+    grid-template-columns: 1fr auto auto;
+    /* grid-template-areas: "Logo sw mobile"; */
+    gap: 1.5em;
+    padding-top: 1rem;
+    padding-bottom: .5rem;
+}
+
+/* ------------------------------------------------------------- Tablet Version*/
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
+    }
+    .btn-toggle-switch .label {
+        display: block;
+    }
+    header .container {
+        gap: 4rem;
+    }
+}
+
+/* ------------------------------------------------------------- Desktop 1k Version */
+@media (min-width: 1400px) {
+    .container {
+        max-width: 1320px;
+    }
+    .btn-toggle-switch .label {
+        display: block;
+    }
+    header .container {
+        grid-template-columns: auto 1fr auto auto;
+        gap: 3rem;
+    }
+    .navbar {
+        /* Menu option Show/Hide */
+        display: block;
+        align-content: center;
+    }
+    #auth-signin-create {
+        /* Sign in / up button Show/Hide */
+        display: block;
+    }
+    .btn-mobile {
+        /* Hamburger menu Show/Hide */
+        display: none;
+    }
+}
+/* ------------------------------------------------------------- Desktop 2k Version */
+/* ------------------------------------------------------------- Desktop 4k Version */
