--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,14 @@ body {
     font-size: 16px;
 }
 
+/* This part divides the site into multiple grids, for the ease of manipulating of the code. */
+.wrapper {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    height: 100vh;
+}
+
+/* This code dictates how links should behave. */
 a {
     color: var(--color-primary);
     text-decoration: none;
@@ -74,6 +82,7 @@ a:hover {
     color: var(--color-primary);
     /* text-decoration: underline; */
 }
+/* This handles how buttons should look, act and feel. */
 .btn-primary {
     background-color: var(--color-primary);
     color: var(--color-white);
@@ -93,7 +102,7 @@ a:hover {
 .btn-primary i {
     margin-right: .5rem;
 }
-
+/* While the earlier button settings focused on the bigger picture, this one focus on the hamburger menu. */
 .btn-mobile {
     background-color: transparent;
     border: none;
@@ -101,6 +110,7 @@ a:hover {
     padding-top: 5px;
 }
 
+/* This part handles the toggle button, for dark/light mode. */
 .btn-toggle-switch {
     display: flex;
     /* align-items: center; */
@@ -158,6 +168,7 @@ a:hover {
     border-radius: 50%;
 }
 
+/* This part handles the navigation bar. */
 .navbar {
     /* Menu Alternatives Show/Hide */
     display: none;
@@ -191,7 +202,31 @@ header .container {
     padding-bottom: .5rem;
 }
 
+/* This part handles the main & main sections of the entire site */
+#showcase {
+    background-image: url(/images/light/background/headerbg.svg);
+    width: 100%;
+    /* height: 700px; */
+}
 
+/* This part handles the last container, the footer. */
+footer {
+    font-size: 14px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    color: var(--color-gray-600);
+
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;        
+    }
+
+    .credit {
+        display: none;
+    }
+}
 
 /* ------------------------------------------------------------- Tablet Version*/
 @media (min-width: 768px) {
@@ -204,12 +239,14 @@ header .container {
     header .container {
         gap: 4rem;
     }
-}
 
-#showcase {
-    background-image: url(/images/light/background/headerbg.svg);
-    width: 100%;
-    /* height: 700px; */
+    footer .container {
+        padding-bottom: 1rem;
+    }
+    footer .credit {
+        display: block;
+    }
+
 }
 
 /* ------------------------------------------------------------- Desktop 1k Version */
@@ -241,6 +278,10 @@ header .container {
         height: 700px;
     }
 
+    footer .container {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
 
 }
 /* ------------------------------------------------------------- Desktop 2k Version */
