--- a/css/main.css
+++ b/css/main.css
@@ -38,8 +38,8 @@ From there on, I've tried to incorporate a one to one replication of the project
 
 }
 
-/* ------------------------------------------------------------- Mobile Version / Base-Line Configuration */
-
+/* ------------------------------------------------------------- MOBILE VERSION / BASE-LINE CONFIGURATION */
+/* MOBILE VERSION / BASE-LINE CONFIGURATION */
 .container {
     width: 100%;
     padding-left: var(--container-padding);
@@ -204,16 +204,39 @@ header .container {
 
 /* This part handles the main & main sections of the entire site */
 
-.brands {
-    display: none;
+/* MOBILE BRAND LOGO SECTION */
+#brands { 
+    display: none; 
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1rem;
+    }
 }
+
+.brand-box {
+    border: 1px solid var(--color-gray-300);
+    border-radius: 8px;
+    height: 100px;
+    width: 196px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* BACKGRONUDS */
 #showcase {
     background-image: url(/images/light/background/headerbg.svg);
     width: 100%;
     /* height: 700px; */
 }
 
-/* This part handles the last container, the footer. */
+/* MOBILE FOOTER SECTION */
 footer {
     font-size: 14px;
     padding-top: 1rem;
@@ -232,7 +255,11 @@ footer {
     }
 }
 
-/* ------------------------------------------------------------- Tablet Version*/
+
+
+/* ------------------------------------------------------------- TABLET VERSION */
+/* TABLET VERSION */
+
 @media (min-width: 768px) {
     .container {
         max-width: 720px;
@@ -244,19 +271,11 @@ footer {
         gap: 4rem;
     }
 
-    /* BRAND LOGO SECTION */
-    /* Pre-School Guidance Material Code - I wanted to see what I was capable of creating out of memory first. */
-    /*    .brands {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 15px;
-        
-        
-        #brand-5 { display: none;}
-        #brand-6 { display: none;}
-        
-    } */
+    #brands {
+        display: block;
+
+        #brand-5, #brand-6 { display: none; }
+    }
 
     footer .container {
         padding-bottom: 1rem;
@@ -267,7 +286,11 @@ footer {
 
 }
 
-/* ------------------------------------------------------------- Desktop 1k Version */
+
+
+/* ------------------------------------------------------------- DESKTOP 1K VERSION */
+/* DESKTOP 1K VERSION */
+
 @media (min-width: 1400px) {
     .container {
         max-width: 1320px;
@@ -296,13 +319,24 @@ footer {
         height: 700px;
     }
 
+    #brands {
+        display: block;
+
+        #brand-5, #brand-6 { display: flex; }
+    }
+
     footer .container {
         padding-top: 2rem;
         padding-bottom: 2rem;
     }
 
 }
-/* ------------------------------------------------------------- Desktop 2k Version */
-/* ------------------------------------------------------------- Desktop 4k Version */
+
+
+
+/* ------------------------------------------------------------- DESKTOP 2K VERSION */
+/* DESKTOP 2K VERSION */
+/* ------------------------------------------------------------- DESKTOP 4K VERSION */
+/* DESKTOP 4K VERSION */
 
 
