--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,30 @@ body {
     font-size: 16px;
 }
 
+.dark-mode {
+    background-color: var(--color-gray-900);
+    color: var(--color-white);
+    
+
+    header {
+        .nav-link {
+            color: var(--color-gray-500);
+        }
+        .nav-link:hover {
+            color: var(--color-primary);
+        }
+    
+        .btn-toggle-switch {
+            .label {
+                color: var(--color-gray-700);
+            }
+        }
+    }
+
+    #showcase {
+        background-image: url(/images/dark/background/headerbg-dark.svg);
+    }
+}
 /* This part divides the site into multiple grids, for the ease of manipulating of the code. */
 .wrapper {
     display: grid;
@@ -174,8 +198,16 @@ a:hover {
     display: none;
 }
 
+
+/* Partly taken from School Guidance Material & ChatGPT */
 #logo {
-    padding-top: 4.3px; 
+    display: flex;
+    align-items: center;
+    padding-top: 4.3px;
+    gap: 8px;
+}
+#logo-text {
+    max-height: 30px;
 }
 
 .nav-link {
@@ -202,8 +234,13 @@ header .container {
     padding-bottom: .5rem;
 }
 
-/* This part handles the main & main sections of the entire site */
+#burger-menu {
+    height: 40px;
+    margin-top: 1px;
+}
 
+/* This part handles the main & main sections of the entire site */
+/*  */
 /* MOBILE BRAND LOGO SECTION */
 #brands { 
     display: none; 
@@ -214,7 +251,7 @@ header .container {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        gap: 1rem;
+        gap: .8rem;
     }
 }
 
@@ -229,9 +266,9 @@ header .container {
 }
 
 
-/* BACKGRONUDS */
+
 #showcase {
-    background-image: url(/images/light/background/headerbg.svg);
+    background-image: url(images/light/background/headerbg.svg);
     width: 100%;
     /* height: 700px; */
 }
